--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -31,14 +31,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.114.0
+      HUGO_VERSION: 0.118.2
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
-      - name: Install snap
-        run: sudo apt install snapd
       - name: Install Dart Sass
         run: sudo snap install dart-sass
       - name: Checkout
@@ -56,7 +54,8 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
-          hugo \
+          hugo -s prebuild --ignoreCache && hugo \
+            --ignoreCache \
             --minify \
             --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
